--- a/package.json
+++ b/package.json
@@ -5,5 +5,8 @@
   "repository": "https://github.com/xiaojianbu/demo-react-ts-template.git",
   "scripts": {},
   "author": "xiaojianbu <360085819@qq.com>",
-  "license": "MIT"
+  "license": "MIT",
+  "devDependencies": {
+    "prettier": "^2.1.2"
+  }
 }
