--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,4 @@
-{ 
+{
   // 指定哪些文件不参与搜索
   "search.exclude": {
     "**/node_modules": true,
@@ -35,5 +35,10 @@
   },
   "[scss]": {
     "editor.defaultFormatter": "esbenp.prettier-vscode"
+  },
+  "eslint.validate": ["javascript", "javascriptreact", "typescript", "typescriptreact"],
+  "typescript.tsdk": "./node_modules/typescript/lib", // 代替 vscode 的 ts 语法智能提示
+  "editor.codeActionsOnSave": {
+    "source.fixAll.eslint": true
   }
 }
