--- a/package.json
+++ b/package.json
@@ -7,6 +7,18 @@
   "author": "xiaojianbu <360085819@qq.com>",
   "license": "MIT",
   "devDependencies": {
-    "prettier": "^2.1.2"
+    "@typescript-eslint/eslint-plugin": "^4.1.1",
+    "@typescript-eslint/parser": "^4.1.1",
+    "eslint": "^7.9.0",
+    "eslint-config-airbnb": "^18.2.0",
+    "eslint-config-prettier": "^6.11.0",
+    "eslint-plugin-import": "^2.22.0",
+    "eslint-plugin-jsx-a11y": "^6.3.1",
+    "eslint-plugin-promise": "^4.2.1",
+    "eslint-plugin-react": "^7.20.6",
+    "eslint-plugin-react-hooks": "^4.1.2",
+    "eslint-plugin-unicorn": "^21.0.0",
+    "prettier": "^2.1.2",
+    "typescript": "^4.0.2"
   }
 }
