--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -40,5 +40,15 @@
   "typescript.tsdk": "./node_modules/typescript/lib", // 代替 vscode 的 ts 语法智能提示
   "editor.codeActionsOnSave": {
     "source.fixAll.eslint": true
+  },
+  // 使用 stylelint 自身的校验即可
+  "css.validate": false,
+  "less.validate": false,
+  "scss.validate": false,
+
+  "editor.formatOnSave": true,
+  "editor.codeActionsOnSave": {
+    "source.fixAll.eslint": true,
+    "source.fixAll.stylelint": true
   }
 }
